# hunter

./: .project
cmake/configs/: default.cmake
cmake/projects/api/: hunter.cmake
cmake/projects/basic/: hunter.cmake
examples/api/: CMakeLists.txt  boo.cpp
examples/basic/: CMakeLists.txt
